[gd_scene load_steps=60 format=2]

[ext_resource path="res://assets/Characters/Boy1.png" type="Texture" id=1]
[ext_resource path="res://assets/Characters/Boy3.png" type="Texture" id=2]
[ext_resource path="res://script/CharacterSelect.gd" type="Script" id=3]
[ext_resource path="res://assets/Characters/Boy2.png" type="Texture" id=4]
[ext_resource path="res://assets/Characters/Boy0.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/Girl1.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/Girl0.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/Girl2.png" type="Texture" id=8]
[ext_resource path="res://assets/Characters/Girl3.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Setting menu.png" type="Texture" id=11]
[ext_resource path="res://assets/GUI/Sprout Lands - UI Pack - Basic pack/Sprite sheets/UI Big Play Button.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.270588, 0.235294, 1 )

[sub_resource type="StyleBoxTexture" id=73]
texture = ExtResource( 10 )
region_rect = Rect2( 292, 18, 7, 12 )

[sub_resource type="StyleBoxTexture" id=74]
texture = ExtResource( 10 )
region_rect = Rect2( 292, 18, 7, 12 )

[sub_resource type="StyleBoxTexture" id=75]
texture = ExtResource( 10 )
region_rect = Rect2( 276, 18, 7, 12 )

[sub_resource type="StyleBoxTexture" id=76]
texture = ExtResource( 10 )
region_rect = Rect2( 293, 2, 7, 12 )

[sub_resource type="StyleBoxTexture" id=77]
texture = ExtResource( 10 )
region_rect = Rect2( 293, 2, 7, 12 )

[sub_resource type="StyleBoxTexture" id=78]
texture = ExtResource( 10 )
region_rect = Rect2( 277, 2, 7, 12 )

[sub_resource type="StyleBoxFlat" id=85]
bg_color = Color( 0.231373, 0.572549, 0.772549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.415686, 0.619608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id=84]

[sub_resource type="StyleBoxFlat" id=86]
bg_color = Color( 0.764706, 0.388235, 0.388235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.580392, 0.309804, 0.309804, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxTexture" id=81]
texture = ExtResource( 12 )
region_rect = Rect2( 99, 4, 90, 25 )

[sub_resource type="StyleBoxTexture" id=82]
texture = ExtResource( 12 )
region_rect = Rect2( 99, 4, 90, 25 )

[sub_resource type="StyleBoxTexture" id=83]
texture = ExtResource( 12 )
region_rect = Rect2( 3, 2, 90, 27 )
margin_left = 1.44889

[sub_resource type="StyleBoxTexture" id=80]
texture = ExtResource( 11 )
region_rect = Rect2( 139, 12, 106, 122 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 47 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 50, 47, 50, 47 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 50, 141, 50, 47 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 50, 94, 50, 47 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 47, 0, 47, 47 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 47, 47, 47, 47 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 47, 141, 47, 47 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 47, 94, 47, 47 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 51, 0, 51, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 51, 48, 51, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 53, 147, 45, 43 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 51, 96, 51, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 47, 3, 47, 47 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 47, 50, 47, 47 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 47, 144, 47, 47 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 47, 97, 47, 47 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 47, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 47, 48, 47, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 47, 144, 47, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 47, 96, 47, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 47, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 47, 48, 47, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 47, 144, 47, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 47, 96, 47, 48 )

[sub_resource type="SpriteFrames" id=72]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Boy0",
"speed": 3.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "Boy1",
"speed": 3.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Boy2",
"speed": 3.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "Boy3",
"speed": 3.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "Girl0",
"speed": 3.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Girl1",
"speed": 3.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "Girl2",
"speed": 3.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "Girl3",
"speed": 3.0
} ]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
margin_right = 513.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left_Btn" type="Button" parent="."]
margin_left = 184.0
margin_top = 96.0
margin_right = 200.0
margin_bottom = 116.0
custom_styles/hover = SubResource( 73 )
custom_styles/pressed = SubResource( 74 )
custom_styles/normal = SubResource( 75 )

[node name="Right_Btn" type="Button" parent="."]
margin_left = 312.0
margin_top = 96.0
margin_right = 328.0
margin_bottom = 117.0
custom_styles/hover = SubResource( 76 )
custom_styles/pressed = SubResource( 77 )
custom_styles/normal = SubResource( 78 )

[node name="Boy_Bg" type="Panel" parent="."]
margin_left = 208.0
margin_top = 160.0
margin_right = 240.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 40, 32 )
custom_styles/panel = SubResource( 85 )

[node name="Boy_CheckBox" type="CheckBox" parent="."]
margin_left = 212.0
margin_top = 164.0
margin_right = 236.0
margin_bottom = 188.0
theme = SubResource( 84 )
flat = true

[node name="Girl_Bg" type="Panel" parent="."]
margin_left = 272.0
margin_top = 160.0
margin_right = 304.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 40, 32 )
custom_styles/panel = SubResource( 86 )

[node name="Girl_CheckBox" type="CheckBox" parent="."]
margin_left = 276.0
margin_top = 164.0
margin_right = 300.0
margin_bottom = 188.0

[node name="Select_Btn" type="Button" parent="."]
margin_left = 224.0
margin_top = 216.0
margin_right = 288.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.282353, 0.270588, 0.235294, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.952941, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.972549, 0.952941, 0.901961, 1 )
custom_styles/hover = SubResource( 81 )
custom_styles/pressed = SubResource( 82 )
custom_styles/normal = SubResource( 83 )
text = "SELECT"

[node name="Char_Bg" type="Panel" parent="."]
margin_left = 216.0
margin_top = 48.0
margin_right = 296.0
margin_bottom = 144.0
custom_styles/panel = SubResource( 80 )

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 256, 104 )
frames = SubResource( 72 )
animation = "Girl3"
playing = true

[connection signal="pressed" from="Left_Btn" to="." method="_on_Left_Btn_pressed"]
[connection signal="pressed" from="Right_Btn" to="." method="_on_Right_Btn_pressed"]
[connection signal="toggled" from="Boy_CheckBox" to="." method="_on_Boy_CheckBox_toggled"]
[connection signal="toggled" from="Girl_CheckBox" to="." method="_on_Girl_CheckBox_toggled"]
[connection signal="pressed" from="Select_Btn" to="." method="_on_Select_Btn_pressed"]
